--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
             android:fitsSystemWindows="true"
             tools:openDrawer="start">
 
-        <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context="com.tlabscloud.r2b.dflow.MainActivity">
+        <!--<androidx.coordinatorlayout.widget.CoordinatorLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--tools:context="com.tlabscloud.r2b.dflow.MainActivity">-->
 
             <fragment
                     android:id="@+id/nav_fragment"
@@ -22,22 +22,22 @@
                     app:defaultNavHost="true"
                     app:navGraph="@navigation/nav_graph"/>
 
-            <com.google.android.material.appbar.AppBarLayout
-                    app:elevation="0dp"
-                    android:id="@+id/appbar"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:theme="@style/AppTheme.AppBarOverlay">
-                <androidx.appcompat.widget.Toolbar
-                        android:id="@+id/toolbar"
-                        app:titleTextAppearance="@android:color/transparent"
-                        android:layout_width="match_parent"
+            <!--<com.google.android.material.appbar.AppBarLayout-->
+                    <!--app:elevation="0dp"-->
+                    <!--android:id="@+id/appbar"-->
+                    <!--android:layout_width="60dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:theme="@style/AppTheme.AppBarOverlay">-->
+                <!--<androidx.appcompat.widget.Toolbar-->
+                        <!--android:id="@+id/toolbar"-->
+                        <!--app:titleTextAppearance="@android:color/transparent"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--app:layout_scrollFlags="scroll|enterAlways|snap"-->
+                        <!--android:layout_height="?attr/actionBarSize"-->
+                        <!--app:popupTheme="@style/AppTheme.PopupOverlay"/>-->
 
-                        android:layout_height="?attr/actionBarSize"
-                        app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-            </com.google.android.material.appbar.AppBarLayout>
-        </FrameLayout>
+            <!--</com.google.android.material.appbar.AppBarLayout>-->
+        <!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->
 
         <com.google.android.material.navigation.NavigationView
                 android:id="@+id/nav_view"
